--- a/Tipped!/res/layout/main_view_item.xml
+++ b/Tipped!/res/layout/main_view_item.xml
@@ -6,18 +6,38 @@
     android:orientation="horizontal" 
     android:descendantFocusability="blocksDescendants">
 
-    <TextView
-        android:id="@+id/newShiftDateTextView"
-        android:layout_width="0dp"
+    <!-- 
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:orientation="vertical" >
+        -->
+        
+        <TextView
+            android:id="@+id/newShiftDateTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/errorMissingText" />
+
+        <!-- 
+        <TextView
+            android:id="@+id/newShiftTypeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/errorMissingText" />
+
+    </LinearLayout>
+    -->
 
     <TextView
         android:id="@+id/newShiftTotalTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
-
+        android:layout_weight="1"
+        android:text="@string/errorMissingText" />
     
 		<!--    
 		<Button
