--- a/Tipped!/res/layout/activity_main_view.xml
+++ b/Tipped!/res/layout/activity_main_view.xml
@@ -9,6 +9,7 @@
 
     <LinearLayout
         android:id="@+id/viewSwitch"
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/pressed_blue"
@@ -17,6 +18,7 @@
 
         <Button
             android:id="@+id/mainShiftsTab"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -26,6 +28,7 @@
 
         <Button
             android:id="@+id/mainStatsTab"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -35,12 +38,14 @@
 
         <Button
             android:id="@+id/mainOptionsTab"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/tab_buttons"
             android:padding="0dp"
             android:text="@string/static_options" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -78,7 +83,7 @@
         android:src="@drawable/divider_bar" />
 
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/mainListView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" >
